teste branch merge print e comentario

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,5 +6,6 @@
         "*/__init__.py": "START",
         "*/get_module.py": "MODULES",
         "*/main.py": "MAIN CODE"
-    }
+    },
+    "python.terminal.activateEnvironment": true
 }
